<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/line_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glHorizontal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVertical0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/line_10"
            app:layout_constraintEnd_toStartOf="@+id/glVertical1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tittleRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProfile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/repository_name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:maxLines="3"
            android:autoSizeMaxTextSize="@dimen/font_size_14"
            android:autoSizeMinTextSize="@dimen/font_size_10"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toTopOf="@+id/glHorizontal1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProfile"
            app:layout_constraintTop_toBottomOf="@id/tittleRepo"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/newPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_12"
            android:gravity="center"
            android:autoSizeMaxTextSize="@dimen/font_size_12"
            android:autoSizeMinTextSize="@dimen/font_size_10"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/glHorizontal1"
            app:layout_constraintEnd_toEndOf="@+id/imgProfile"
            app:layout_constraintStart_toStartOf="@+id/imgProfile"
            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
            tools:text="@string/owner_name" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgStart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/line_10"
            android:src="@android:drawable/star_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal1" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glVertical0"
            app:layout_constraintStart_toEndOf="@+id/imgStart"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal1"
            tools:text="@string/number_0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLanguage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glVertical0"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal1" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLanguage"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal1"
            tools:text="@string/undefined" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLanguage"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal1"
            tools:text="@string/public_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>